Resolved visibility of payment issue in the notifcation message

--- a/Ecom_Auth-Services/src/main/resources/static/css/styles.css
+++ b/Ecom_Auth-Services/src/main/resources/static/css/styles.css
@@ -239,7 +239,7 @@ a:hover {
 }
 
 .btn-block {
-    width: 30%;
+    width: 100%;
     display: block;
 }
 
